# ComputationalGeometry

./: .clang-format  .gitignore  AppLayer_8h_source.html  CMakeLists.txt  Dependencies.cmake  EntryPoint_8cpp_source.html  MeshIntegrity_8cpp_source.html  MeshIntegrity_8h_source.html  MeshLoader_8cpp_source.html  MeshLoader_8h_source.html  MeshLoader__utest_8cpp_source.html  Mesh_8cpp_source.html  Mesh_8h_source.html  PrimitiveProxy_8cpp_source.html  PrimitiveProxy_8h_source.html  Primitive_8cpp_source.html  Primitive_8h_source.html  README.md  VertexPair_8h_source.html  VertexPair__utest_8cpp_source.html  classApplication_1_1AppLayer-members.html  classApplication_1_1AppLayer__inherit__graph.map  classData_1_1Internal_1_1ExtraDataContainer-members.html  classData_1_1Primitive_1_1FaceProxy-members.html  classData_1_1Primitive_1_1FaceProxy.html  classData_1_1Primitive_1_1FaceProxy.js  classData_1_1Primitive_1_1VertexPair-members.html  classData_1_1Primitive_1_1VertexPair.html  classData_1_1Primitive_1_1VertexPair.js  classData_1_1Primitive_1_1VertexProxy-members.html  classData_1_1Primitive_1_1VertexProxy.html  classData_1_1Primitive_1_1VertexProxy.js  classData_1_1Surface_1_1Mesh-members.html  classData_1_1Surface_1_1Mesh.html  classData_1_1Surface_1_1Mesh.js  dir_74389ed8173ad57b461b9d623a1f3867.html  dir_76d58c5c53acb9560a8aed7987657af9_dep.map  dir_856524284ebe840938865dc061f982fb.html  dir_c056be9224243bbbd8d1b6360af2399e.html  dir_c056be9224243bbbd8d1b6360af2399e.js  (+31 more)
.github/workflows/: ci.yml
App/: CMakeLists.txt  EntryPoint.cpp
App/Include/Application/: AppLayer.h  BaseType.h  ExtraDataContainer.h  ExtraDataType.h  MathHelpers.h  MathUtils.h  Mesh.h  MeshExporter.h  MeshIntegrity.h  MeshLoader.h  MeshPrimitive.h  Primitive.h  PrimitiveProxy.h  TestHelpers.h  VertexPair.h
App/Source/: AppLayer.cpp  AppLayer.h  Main.cpp  Mesh.cpp  MeshCirculator.cpp  MeshExporter.cpp  MeshIntegrity.cpp  MeshLoader.cpp  Primitive.cpp  PrimitiveProxy.cpp  RunApp.cpp  VertexPair.cpp
App/Test/: CMakeLists.txt
App/Test/Include/: TestHelpers.h
App/Test/Source/: MathHelpers_utest.cpp  MathUtils_utest.cpp  MeshCirculator_utest.cpp  MeshExporter_utest.cpp  MeshIntegrity_utest.cpp  MeshLoader_utest.cpp  Mesh_utest.cpp  PrimitiveProxy_utest.cpp  Primitive_utest.cpp  VertexPair_utest.cpp
Core/: CMakeLists.txt
Core/Source/: Application.cpp  Window.cpp
cmake/: ConfigPresets.cmake  Coverage.cmake  CppCheck.cmake  Dependencies.cmake  Doxyfile.in  Doxygen.cmake  Memcheck.cmake  Packaging.cmake  WarningProperties.cmake
coverage/: cmd_line  coverage.info  index-sort-f.html  index-sort-l.html  index.html
coverage/Source/: Mesh.cpp.func-c.html  Mesh.cpp.func.html  Mesh.cpp.gcov.html  MeshCirculator.cpp.func-c.html  MeshCirculator.cpp.func.html  MeshCirculator.cpp.gcov.html  MeshExporter.cpp.func-c.html  MeshExporter.cpp.func.html  MeshExporter.cpp.gcov.html  MeshIntegrity.cpp.func-c.html  MeshIntegrity.cpp.func.html  MeshIntegrity.cpp.gcov.html  MeshLoader.cpp.func-c.html  MeshLoader.cpp.func.html  MeshLoader.cpp.gcov.html  Primitive.cpp.func-c.html  Primitive.cpp.func.html  Primitive.cpp.gcov.html  PrimitiveProxy.cpp.func-c.html  PrimitiveProxy.cpp.func.html  PrimitiveProxy.cpp.gcov.html  VertexPair.cpp.func-c.html  VertexPair.cpp.func.html  VertexPair.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/: AppLayer_8cpp.html  AppLayer_8cpp__incl.map  AppLayer_8cpp__incl.md5  AppLayer_8cpp_source.html  AppLayer_8h.html  AppLayer_8h.js  AppLayer_8h__dep__incl.map  AppLayer_8h__dep__incl.md5  AppLayer_8h__incl.map  AppLayer_8h__incl.md5  AppLayer_8h_source.html  Application_8cpp.html  Application_8cpp.js  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8cpp_source.html  Application_8h.html  Application_8h.js  Application_8h__dep__incl.map  Application_8h__dep__incl.md5  Application_8h__incl.map  Application_8h__incl.md5  Application_8h_source.html  BaseType_8h.html  BaseType_8h.js  BaseType_8h__dep__incl.map  BaseType_8h__dep__incl.md5  BaseType_8h__incl.map  BaseType_8h__incl.md5  BaseType_8h_source.html  EntryPoint_8cpp.html  EntryPoint_8cpp.js  EntryPoint_8cpp_source.html  Event_8h.html  Event_8h.js  Event_8h__dep__incl.map  Event_8h__dep__incl.md5  Event_8h_source.html  ExtraDataContainer_8h.html  ExtraDataContainer_8h.js  (+652 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  (+61 more)
memcheck/: index.html  report.memcheck  report.memcheck.html.part.js
search/: all_0.js  all_3.js  all_6.js  all_7.js  all_8.js  all_d.js  classes_0.js  enums_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  functions_a.js  namespaces_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
(+119 files in other folders)
